test/Macros/DebugDescription/error_complex_implementation.code
// REQUIRES: language_language_parser

// RUN: %empty-directory(%t)
// RUN: %target-language-frontend %s -language-version 5 -module-name main -disable-availability-checking -typecheck -verify -plugin-path %language-plugin-dir
// RUN: %target-language-frontend %s -language-version 5 -module-name main -disable-availability-checking -typecheck -verify -external-plugin-path %language-plugin-dir#%language-plugin-server

@DebugDescription
struct MyStruct {
  var flag: Bool

  // expected-error @+1 {{body must consist of a single string literal}}
  var debugDescription: String {
    flag ? "yes" : "no"
  }
}
